# ramiel

./: .gitignore  CMakeLists.txt  README.md  aaa.cpp  camera.cpp  camera.h  clip.cpp  clip.h  draw.cpp  draw.h  effects.cpp  effects.h  entity.cpp  entity.h  global.h  graphics.cpp  graphics.h  input.cpp  input.h  light.cpp  light.h  line.h  main.cpp  makefile  physics.cpp  physics.h  render.cpp  render.h  triangle.cpp  triangle.h  util.cpp  util.h  vec.cpp  vec.h
docs/: core.md  effects.md  shaders.md
example/: CMakeLists.txt  main.cpp
example/shaders/: CMakeLists.txt  PixelShader  PixelShaderTextured  VertexShaderTextured
example/shaders/vertextypes/: VtFlatPixel.h  VtFlatTxt.h  VtSmooth.h  VtSmoothPixel.h  VtSmoothPixelTxt.h  VtSmoothTxt.h
examples/: glfw_example.cpp
examples/glfw_example/: main.cpp
examples/shaders/vertextypes/: VtFlat.h  VtFlatPixelTxt.h
include/: graphicsbl.h  ramiel.h
include/ramiel/: args.h  data.h  engine.h  file.h  graphics.h  math.h  physics.h  ramiel.h  shaders.h
old/: camera.h  draw.h  input.h  render.cpp  render.h  util.h
src/: CMakeLists.txt  README.md  camera.cpp  camera.h  collider.cpp  collider.h  collision.cpp  collision.h  draw.cpp  draw.h  dynamics.h  effects.cpp  effects.h  entity.cpp  entity.h  entitybase.h  graphics.cpp  graphics.h  graphicsbl.cpp  graphicsbl_p.h  light.cpp  light.h  mesh.cpp  mesh.h  meshbase.h  meshvertex.h  model.cpp  model.h  objloader.cpp  objloader.h  physics.cpp  physics.h  physicsobj.cpp  physicsobj.h  physicsobject.cpp  physicsobject.h  pixelshader.cpp  pixelshader.h  ramiel.cpp  ramiel.h  (+16 more)
src/data/: CMakeLists.txt  json.cpp  json.h  mesh.cpp  mesh.h  texture.h  tree.cpp  tree.h  tuple.h  voidbuffer.cpp  voidbuffer.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h  event.cpp  event.h  filesystem.cpp  filesystem.h
src/file/: CMakeLists.txt  image.cpp  image.h  objloader.cpp  objloader.h
src/graphics/: CMakeLists.txt  camera.cpp  camera.h  clip.cpp  clip.h  effects.cpp  effects.h  entity.cpp  entity.h  graphics.cpp  graphics.h  light.cpp  light.h  line.cpp  line.h  pixelshader.h  rasterize.cpp  rasterize.h  texture.cpp  texture.h  triangle.cpp  triangle.h  vertex.cpp  vertex.h  vertexshader.h
src/graphics/shaderlang/: CMakeLists.txt  attribute.cpp  attribute.h  func.cpp  func.h  main.cpp  pixelshader.cpp  pixelshader.h  read.cpp  read.h  shader.cpp  shader.h  shaderlang.cpp  shaderlang.h  stringify.cpp  stringify.h  template.cpp  template.h  token.cpp  token.h  vertexshader.cpp  vertexshader.h
src/graphics/shaderlang/template/: pixelShaderHeader  pixelShaderSource  vertexShaderHeader  vertexShaderSource
src/graphics/shaders/: CMakeLists.txt  PixelShader  VertexShader  shaders.h
src/math/: CMakeLists.txt  interpolate.cpp  interpolate.h  mat.h  mesh.h  meshvertex.h  quaternion.cpp  quaternion.h  rotation.cpp  transform.h  vec.cpp  vec.h
src/physics/: CMakeLists.txt  broadcollision.cpp  broadcollision.h  collider.cpp  collider.h  collision.cpp  collision.h  collisiondetect.cpp  collisiondetect.h  collisiondispatch.cpp  collisiondispatch.h  collisionhandle.cpp  collisionhandle.h  collisionresolve.cpp  collisionresolve.h  constraint.cpp  constraint.h  dynamics.h  entity.cpp  entity.h  inertia.cpp  inertia.h  physics.cpp  physics.h  physicsobject.h  softbody.cpp  softbody.h
tests/: CMakeLists.txt  camera.test.cpp  collision.test.cpp  dynamics.test.cpp  effects.test.cpp  light.test.cpp  main.cpp  makefile  mesh.test.cpp  model.test.cpp  objloader.test.cpp  physics.test.cpp  rotation.test.cpp  texture.test.cpp  transform.test.cpp  vec.test.cpp
tests/data/: tuple.test.cpp  voidbuffer.test.cpp
tests/file/: image.test.cpp  objloader.test.cpp
tests/framework/: CMakeLists.txt  main.cpp  test.cpp  util.cpp
tests/framework/include/ramiel/: test.h  util.h
tests/graphics/: camera.test.cpp  effects.test.cpp  light.test.cpp  texture.test.cpp
tests/math/: rotation.test.cpp  transform.test.cpp  vec.test.cpp
tests/physics/: collision.test.cpp  collisiondispatch.test.cpp  collisionhandle.test.cpp  dynamics.test.cpp
tests/tests/: CMakeLists.txt
tests/tests/data/: CMakeLists.txt  json.test.cpp  texture.test.cpp  tree.test.cpp  tuple.test.cpp  voidbuffer.test.cpp
tests/tests/engine/: CMakeLists.txt  event.test.cpp
tests/tests/file/: CMakeLists.txt  image.test.cpp  objloader.test.cpp
tests/tests/graphics/: CMakeLists.txt  camera.test.cpp  effects.test.cpp  light.test.cpp  vertex.test.cpp
tests/tests/math/: CMakeLists.txt  mat.test.cpp  quaternion.test.cpp  transform.test.cpp  vec.test.cpp
tests/tests/physics/: CMakeLists.txt  collisiondispatch.test.cpp  collisionhandle.test.cpp  physics.test.cpp
